uusi yritys logslider z-index fixiin

--- a/style.scss
+++ b/style.scss
@@ -33,5 +33,5 @@ Version: 0.1
 // Fixes partners container from "Logo Slider by LogicHunt.com"-plugin
 // going over menu when scrolled. For sure doesn't belong here. Yikes.
 .owl-carousel {
-  z-index: unset;
+  z-index: unset !important;
 }
